--- a/SparkPlugins/iTunes/Resources/English.lproj/Help/help.css
+++ b/SparkPlugins/iTunes/Resources/English.lproj/Help/help.css
@@ -10,11 +10,9 @@ border-width: 1px 0 1px 0; border-style: solid; border-color: #666666;}
 #hmenu li:hover { background-color: #bfbfbf; padding: 4px 5px 4px 5px; 
 border-width: 0px 1px 0px 1px; border-style: solid; border-color: #666666 }
 
-dt { font-size: 1.1em; text-decoration: underline; }
-dl, dd { margin-left: 0.5em; }
 
 h1 { white-space: nowrap; }
-li { white-space: nowrap; }
+ul, li { white-space: nowrap; }
 
 .chapter {
 	font-size: 18px;
