--- a/SparkPlugins/iTunes/Resources/French.lproj/Help/help.css
+++ b/SparkPlugins/iTunes/Resources/French.lproj/Help/help.css
@@ -1,4 +1,4 @@
-a { color: #2562a2; }
+﻿a { color: #2562a2; }
 
 #hmenu { list-style: none; font-size: 10pt; text-align: center; background-color: #e0e0e0; padding: 4px;
 border-width: 1px 0 1px 0; border-style: solid; border-color: #666666;}
