--- a/SparkPlugins/AppleScript/Resources/English.lproj/AppleScriptPlugin.xib
+++ b/SparkPlugins/AppleScript/Resources/English.lproj/AppleScriptPlugin.xib
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<archive type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="7.02">
+<archive type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="7.03">
 	<data>
 		<int key="IBDocument.SystemTarget">1040</int>
 		<string key="IBDocument.SystemVersion">9F33</string>
-		<string key="IBDocument.InterfaceBuilderVersion">672</string>
+		<string key="IBDocument.InterfaceBuilderVersion">677</string>
 		<string key="IBDocument.AppKitVersion">949.34</string>
 		<string key="IBDocument.HIToolboxVersion">352.00</string>
 		<object class="NSMutableArray" key="IBDocument.EditedObjectIDs">
@@ -14,6 +14,15 @@
 			<bool key="EncodedWithXMLCoder">YES</bool>
 			<string>com.apple.OSAKit.IBPlugin</string>
 			<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
+		</object>
+		<object class="NSMutableDictionary" key="IBDocument.Metadata">
+			<bool key="EncodedWithXMLCoder">YES</bool>
+			<object class="NSArray" key="dict.sortedKeys">
+				<bool key="EncodedWithXMLCoder">YES</bool>
+			</object>
+			<object class="NSMutableArray" key="dict.values">
+				<bool key="EncodedWithXMLCoder">YES</bool>
+			</object>
 		</object>
 		<object class="NSMutableArray" key="IBDocument.RootObjects" id="389347879">
 			<bool key="EncodedWithXMLCoder">YES</bool>
@@ -34,7 +43,7 @@
 					<object class="NSTabView" id="599739459">
 						<reference key="NSNextResponder" ref="901456783"/>
 						<int key="NSvFlags">274</int>
-						<string key="NSFrame">{{1, -2}, {458, 284}}</string>
+						<string key="NSFrame">{{1, 26}, {458, 284}}</string>
 						<reference key="NSSuperview" ref="901456783"/>
 						<object class="NSMutableArray" key="NSTabViewItems">
 							<bool key="EncodedWithXMLCoder">YES</bool>
@@ -431,7 +440,7 @@
 					<object class="NSTextField" id="50147279">
 						<reference key="NSNextResponder" ref="901456783"/>
 						<int key="NSvFlags">268</int>
-						<string key="NSFrame">{{9, 296}, {56, 14}}</string>
+						<string key="NSFrame">{{9, 324}, {56, 14}}</string>
 						<reference key="NSSuperview" ref="901456783"/>
 						<reference key="NSNextKeyView" ref="581596073"/>
 						<bool key="NSEnabled">YES</bool>
@@ -448,7 +457,7 @@
 					<object class="NSTextField" id="581596073">
 						<reference key="NSNextResponder" ref="901456783"/>
 						<int key="NSvFlags">266</int>
-						<string key="NSFrame">{{70, 294}, {370, 19}}</string>
+						<string key="NSFrame">{{70, 322}, {370, 19}}</string>
 						<reference key="NSSuperview" ref="901456783"/>
 						<bool key="NSEnabled">YES</bool>
 						<object class="NSTextFieldCell" key="NSCell" id="820693807">
@@ -464,7 +473,7 @@
 								<string key="NSColorName">textBackgroundColor</string>
 								<reference key="NSColor" ref="369000672"/>
 							</object>
-							<object class="NSColor" key="NSTextColor">
+							<object class="NSColor" key="NSTextColor" id="503339472">
 								<int key="NSColorSpace">6</int>
 								<string key="NSCatalogName">System</string>
 								<string key="NSColorName">textColor</string>
@@ -475,7 +484,7 @@
 					<object class="NSBox" id="867661922">
 						<reference key="NSNextResponder" ref="901456783"/>
 						<int key="NSvFlags">266</int>
-						<string key="NSFrame">{{0, 319}, {460, 5}}</string>
+						<string key="NSFrame">{{0, 347}, {460, 5}}</string>
 						<reference key="NSSuperview" ref="901456783"/>
 						<string key="NSOffsets">{0, 0}</string>
 						<object class="NSTextFieldCell" key="NSTitleCell">
@@ -501,7 +510,7 @@
 					<object class="NSBox" id="706235603">
 						<reference key="NSNextResponder" ref="901456783"/>
 						<int key="NSvFlags">266</int>
-						<string key="NSFrame">{{0, 285}, {460, 5}}</string>
+						<string key="NSFrame">{{0, 313}, {460, 5}}</string>
 						<reference key="NSSuperview" ref="901456783"/>
 						<string key="NSOffsets">{0, 0}</string>
 						<object class="NSTextFieldCell" key="NSTitleCell">
@@ -520,13 +529,153 @@
 						<int key="NSTitlePosition">0</int>
 						<bool key="NSTransparent">NO</bool>
 					</object>
+					<object class="NSTextField" id="180279182">
+						<reference key="NSNextResponder" ref="901456783"/>
+						<int key="NSvFlags">292</int>
+						<string key="NSFrame">{{17, 8}, {91, 17}}</string>
+						<reference key="NSSuperview" ref="901456783"/>
+						<reference key="NSNextKeyView" ref="924562917"/>
+						<bool key="NSEnabled">YES</bool>
+						<object class="NSTextFieldCell" key="NSCell" id="340186185">
+							<int key="NSCellFlags">67239424</int>
+							<int key="NSCellFlags2">272629760</int>
+							<string type="base64-UTF8" key="NSContents">UmVwZWF0IEludGVydmFswqA6A</string>
+							<reference key="NSSupport" ref="26"/>
+							<reference key="NSControlView" ref="180279182"/>
+							<reference key="NSBackgroundColor" ref="522046086"/>
+							<reference key="NSTextColor" ref="753883112"/>
+						</object>
+					</object>
+					<object class="NSTextField" id="924562917">
+						<reference key="NSNextResponder" ref="901456783"/>
+						<int key="NSvFlags">292</int>
+						<string key="NSFrame">{{109, 9}, {40, 19}}</string>
+						<reference key="NSSuperview" ref="901456783"/>
+						<reference key="NSNextKeyView" ref="792336809"/>
+						<bool key="NSEnabled">YES</bool>
+						<object class="NSTextFieldCell" key="NSCell" id="1051015153">
+							<int key="NSCellFlags">-1804468671</int>
+							<int key="NSCellFlags2">71435264</int>
+							<string key="NSContents">0</string>
+							<reference key="NSSupport" ref="26"/>
+							<string key="NSPlaceholderString">0</string>
+							<reference key="NSControlView" ref="924562917"/>
+							<bool key="NSDrawsBackground">YES</bool>
+							<reference key="NSBackgroundColor" ref="308182722"/>
+							<reference key="NSTextColor" ref="503339472"/>
+						</object>
+					</object>
+					<object class="NSTextField" id="792336809">
+						<reference key="NSNextResponder" ref="901456783"/>
+						<int key="NSvFlags">292</int>
+						<string key="NSFrame">{{150, 8}, {262, 17}}</string>
+						<reference key="NSSuperview" ref="901456783"/>
+						<bool key="NSEnabled">YES</bool>
+						<object class="NSTextFieldCell" key="NSCell" id="38564412">
+							<int key="NSCellFlags">67239424</int>
+							<int key="NSCellFlags2">272629760</int>
+							<string key="NSContents">ms (set 0 to disable repetition)</string>
+							<reference key="NSSupport" ref="26"/>
+							<reference key="NSControlView" ref="792336809"/>
+							<reference key="NSBackgroundColor" ref="522046086"/>
+							<reference key="NSTextColor" ref="753883112"/>
+						</object>
+					</object>
 				</object>
-				<string key="NSFrameSize">{460, 326}</string>
+				<string key="NSFrameSize">{460, 354}</string>
 				<reference key="NSSuperview"/>
 				<string key="NSClassName">NSView</string>
 				<string key="NSExtension">NSResponder</string>
 			</object>
 			<object class="OSAScriptController" id="610162510"/>
+			<object class="NSNumberFormatter" id="509193054">
+				<object class="NSMutableDictionary" key="NS.attributes">
+					<bool key="EncodedWithXMLCoder">YES</bool>
+					<object class="NSMutableArray" key="dict.sortedKeys">
+						<bool key="EncodedWithXMLCoder">YES</bool>
+						<string>allowsFloats</string>
+						<string>attributedStringForZero</string>
+						<string>decimalSeparator</string>
+						<string>formatterBehavior</string>
+						<string>groupingSeparator</string>
+						<string>locale</string>
+						<string>minimum</string>
+						<string>negativeFormat</string>
+						<string>positiveFormat</string>
+						<string>textAttributesForNegativeValues</string>
+						<string>usesGroupingSeparator</string>
+					</object>
+					<object class="NSMutableArray" key="dict.values">
+						<bool key="EncodedWithXMLCoder">YES</bool>
+						<reference ref="9"/>
+						<object class="NSAttributedString" id="446035245">
+							<string key="NSString">0</string>
+							<object class="NSDictionary" key="NSAttributes" id="723313807">
+								<bool key="EncodedWithXMLCoder">YES</bool>
+								<object class="NSArray" key="dict.sortedKeys">
+									<bool key="EncodedWithXMLCoder">YES</bool>
+								</object>
+								<object class="NSMutableArray" key="dict.values">
+									<bool key="EncodedWithXMLCoder">YES</bool>
+								</object>
+							</object>
+						</object>
+						<string>,</string>
+						<integer value="1000"/>
+						<string type="base64-UTF8">wqA</string>
+						<object class="NSLocale">
+							<string key="NS.identifier">fr_FR</string>
+						</object>
+						<object class="NSDecimalNumberPlaceholder" id="267232123">
+							<int key="NS.exponent">0</int>
+							<int key="NS.length">1</int>
+							<bool key="NS.negative">NO</bool>
+							<bool key="NS.compact">YES</bool>
+							<int key="NS.mantissa.bo">1</int>
+							<bytes key="NS.mantissa">AQAAAAAAAAAAAAAAAAAAAA</bytes>
+						</object>
+						<string>-#,##0.#</string>
+						<string>#,##0.#</string>
+						<object class="NSDictionary" id="1047618294">
+							<bool key="EncodedWithXMLCoder">YES</bool>
+							<object class="NSArray" key="dict.sortedKeys">
+								<bool key="EncodedWithXMLCoder">YES</bool>
+							</object>
+							<object class="NSMutableArray" key="dict.values">
+								<bool key="EncodedWithXMLCoder">YES</bool>
+							</object>
+						</object>
+						<boolean value="YES"/>
+					</object>
+				</object>
+				<string key="NS.positiveformat">#,##0.#</string>
+				<string key="NS.negativeformat">-#,##0.#</string>
+				<nil key="NS.positiveattrs"/>
+				<reference key="NS.negativeattrs" ref="1047618294"/>
+				<reference key="NS.zero" ref="446035245"/>
+				<object class="NSAttributedString" key="NS.nil">
+					<string key="NSString"/>
+				</object>
+				<object class="NSAttributedString" key="NS.nan">
+					<string key="NSString">NaN</string>
+					<reference key="NSAttributes" ref="723313807"/>
+				</object>
+				<reference key="NS.min" ref="267232123"/>
+				<object class="NSDecimalNumberPlaceholder" key="NS.max">
+					<int key="NS.exponent">0</int>
+					<int key="NS.length">0</int>
+					<bool key="NS.negative">YES</bool>
+					<bool key="NS.compact">NO</bool>
+					<int key="NS.mantissa.bo">1</int>
+					<bytes key="NS.mantissa">AAAAAAAAAAAAAAAAAAAAAA</bytes>
+				</object>
+				<nil key="NS.rounding"/>
+				<string key="NS.decimal">,</string>
+				<string type="base64-UTF8" key="NS.thousand">wqA</string>
+				<bool key="NS.hasthousands">YES</bool>
+				<bool key="NS.localized">YES</bool>
+				<bool key="NS.allowsfloats">YES</bool>
+			</object>
 		</object>
 		<object class="IBObjectContainer" key="IBDocument.Objects">
 			<object class="NSMutableArray" key="connectionRecords">
@@ -651,6 +800,30 @@
 					</object>
 					<int key="connectionID">212</int>
 				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBOutletConnection" key="connection">
+						<string key="label">formatter</string>
+						<reference key="source" ref="924562917"/>
+						<reference key="destination" ref="509193054"/>
+					</object>
+					<int key="connectionID">238</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBBindingConnection" key="connection">
+						<string key="label">value: sparkAction.repeat</string>
+						<reference key="source" ref="924562917"/>
+						<reference key="destination" ref="583174768"/>
+						<object class="NSNibBindingConnector" key="connector">
+							<reference key="NSSource" ref="924562917"/>
+							<reference key="NSDestination" ref="583174768"/>
+							<string key="NSLabel">value: sparkAction.repeat</string>
+							<string key="NSBinding">value</string>
+							<string key="NSKeyPath">sparkAction.repeat</string>
+							<int key="NSNibBindingConnectorVersion">2</int>
+						</object>
+					</object>
+					<int key="connectionID">239</int>
+				</object>
 			</object>
 			<object class="IBMutableOrderedSet" key="objectRecords">
 				<object class="NSArray" key="orderedObjects">
@@ -685,6 +858,9 @@
 							<reference ref="867661922"/>
 							<reference ref="706235603"/>
 							<reference ref="581596073"/>
+							<reference ref="180279182"/>
+							<reference ref="924562917"/>
+							<reference ref="792336809"/>
 						</object>
 						<reference key="parent" ref="530912968"/>
 						<string key="objectName">ActionView</string>
@@ -955,6 +1131,54 @@
 						<reference key="parent" ref="530912968"/>
 						<string key="objectName">Application</string>
 					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">228</int>
+						<reference key="object" ref="180279182"/>
+						<object class="NSMutableArray" key="children">
+							<bool key="EncodedWithXMLCoder">YES</bool>
+							<reference ref="340186185"/>
+						</object>
+						<reference key="parent" ref="901456783"/>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">229</int>
+						<reference key="object" ref="924562917"/>
+						<object class="NSMutableArray" key="children">
+							<bool key="EncodedWithXMLCoder">YES</bool>
+							<reference ref="1051015153"/>
+						</object>
+						<reference key="parent" ref="901456783"/>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">230</int>
+						<reference key="object" ref="792336809"/>
+						<object class="NSMutableArray" key="children">
+							<bool key="EncodedWithXMLCoder">YES</bool>
+							<reference ref="38564412"/>
+						</object>
+						<reference key="parent" ref="901456783"/>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">231</int>
+						<reference key="object" ref="38564412"/>
+						<reference key="parent" ref="792336809"/>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">232</int>
+						<reference key="object" ref="1051015153"/>
+						<reference key="parent" ref="924562917"/>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">233</int>
+						<reference key="object" ref="340186185"/>
+						<reference key="parent" ref="180279182"/>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">237</int>
+						<reference key="object" ref="509193054"/>
+						<reference key="parent" ref="530912968"/>
+						<string key="objectName">Lantency</string>
+					</object>
 				</object>
 			</object>
 			<object class="NSMutableDictionary" key="flattenedProperties">
@@ -963,6 +1187,7 @@
 					<bool key="EncodedWithXMLCoder">YES</bool>
 					<string>-1.IBPluginDependency</string>
 					<string>-2.IBPluginDependency</string>
+					<string>-3.IBPluginDependency</string>
 					<string>104.IBAttributePlaceholdersKey</string>
 					<string>104.IBPluginDependency</string>
 					<string>104.ImportedFromIB2</string>
@@ -1017,11 +1242,35 @@
 					<string>207.ImportedFromIB2</string>
 					<string>208.IBPluginDependency</string>
 					<string>208.ImportedFromIB2</string>
+					<string>214.IBPluginDependency</string>
+					<string>215.IBPluginDependency</string>
+					<string>216.IBPluginDependency</string>
+					<string>217.IBPluginDependency</string>
+					<string>218.IBPluginDependency</string>
+					<string>219.IBPluginDependency</string>
+					<string>220.IBPluginDependency</string>
+					<string>221.IBPluginDependency</string>
+					<string>222.IBPluginDependency</string>
+					<string>223.IBPluginDependency</string>
+					<string>224.IBPluginDependency</string>
 					<string>224.IBShouldRemoveOnLegacySave</string>
+					<string>225.IBPluginDependency</string>
 					<string>225.IBShouldRemoveOnLegacySave</string>
+					<string>228.IBPluginDependency</string>
+					<string>228.ImportedFromIB2</string>
+					<string>229.IBPluginDependency</string>
+					<string>229.ImportedFromIB2</string>
+					<string>230.IBPluginDependency</string>
+					<string>230.ImportedFromIB2</string>
+					<string>231.IBPluginDependency</string>
+					<string>232.IBPluginDependency</string>
+					<string>233.IBPluginDependency</string>
+					<string>237.IBPluginDependency</string>
+					<string>237.ImportedFromIB2</string>
 				</object>
 				<object class="NSMutableArray" key="dict.values">
 					<bool key="EncodedWithXMLCoder">YES</bool>
+					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
 					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
 					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
 					<object class="NSMutableDictionary">
@@ -1052,7 +1301,7 @@
 							<string type="base64-UTF8" key="toolTip">Q2hvb3NlIGEgU2NyaXB0IG9yIGEgVGV4dCBGaWxl4oCmA</string>
 						</object>
 					</object>
-					<string>{{182, 422}, {460, 326}}</string>
+					<string>{{182, 394}, {460, 354}}</string>
 					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
 					<reference ref="9"/>
 					<reference ref="9"/>
@@ -1095,7 +1344,7 @@
 					<reference ref="9"/>
 					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
 					<reference ref="9"/>
-					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
+					<string>com.apple.OSAKit.IBPlugin</string>
 					<reference ref="9"/>
 					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
 					<reference ref="9"/>
@@ -1113,7 +1362,30 @@
 					<reference ref="9"/>
 					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
 					<reference ref="9"/>
+					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
+					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
+					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
+					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
+					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
+					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
+					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
+					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
+					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
+					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
+					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
 					<reference ref="9"/>
+					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
+					<reference ref="9"/>
+					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
+					<reference ref="9"/>
+					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
+					<reference ref="9"/>
+					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
+					<reference ref="9"/>
+					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
+					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
+					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
+					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
 					<reference ref="9"/>
 				</object>
 			</object>
@@ -1137,7 +1409,7 @@
 				</object>
 			</object>
 			<nil key="sourceID"/>
-			<int key="maxID">225</int>
+			<int key="maxID">239</int>
 		</object>
 		<object class="IBClassDescriber" key="IBDocument.Classes">
 			<object class="NSMutableArray" key="referencedPartialClassDescriptions">
